--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		<!-- ===== NAVIGATION BAR ===== -->
 		<nav class="navbar">
 			<div class="logo">
-				<a href="/"><img src="images/logo.png" alt="Marci Metzger Homes" /></a>
+				<a href="#home"><img src="images/logo.png" alt="Marci Metzger Homes" /></a>
 			</div>
 			<!-- FOR MOBILE VERSION -->
 			<div class="menu-toggle" id="menu-toggle">
@@ -44,7 +44,7 @@
 		</nav>
 
 		<!-- ===== BANNER SECTION ===== -->
-		<div class="banner">
+		<div class="banner" id="home">
 			<div class="banner-video">
 				<video autoplay muted loop playsinline>
 					<source src="banner.mp4" type="video/mp4" />
@@ -57,7 +57,7 @@
 					Your Trusted Pahrump Realtor – Guiding You Home with Expertise and
 					Care
 				</p>
-				<a href="/">Call Now</a>
+				<a href="#home">Call Now</a>
 			</div>
 		</div>
 
